--- a/server/conf/nginx.conf
+++ b/server/conf/nginx.conf
@@ -6,7 +6,9 @@ events {
     worker_connections 512;
 }
 http {
-
+    resolver 8.8.8.8;
+    lua_ssl_trusted_certificate "../cert/cacert.pem";
+    lua_ssl_verify_depth 10;
     sendfile on;
     include ./mime.types;
     lua_code_cache off;
