--- a/server/conf/nginx.conf
+++ b/server/conf/nginx.conf
@@ -11,7 +11,7 @@ http {
     lua_ssl_verify_depth 10;
     sendfile on;
     include ./mime.types;
-    lua_code_cache off;
+    lua_code_cache on;
 
     lua_package_path  "$prefix/resty_modules/lualib/?.lua;;./app/?.lua;;?.lua;;";
     lua_package_cpath "$prefix/resty_modules/lualib/?.so;;/usr/local/openresty/lualib/?.so;;";
