server and dev use different config

--- a/server/conf/nginx.conf
+++ b/server/conf/nginx.conf
@@ -1,10 +1,12 @@
 
 error_log logs/error.log error;
 
+env ENV;
 
 events {
     worker_connections 512;
 }
+
 http {
     resolver 8.8.8.8;
     lua_ssl_trusted_certificate "../cert/cacert.pem";
@@ -43,9 +45,9 @@ http {
 
 
 
-stream {
-   server {
-      listen 8002 ;
-      content_by_lua_file app/socket/main.lua;
-  }
-}
+# stream {
+#    server {
+#       listen 8002 ;
+#       content_by_lua_file app/socket/main.lua;
+#   }
+# }
